temporary commit - included mcp with sse and streamablehttp transport
changelog: added